renamed the href’s to the new kebab case files

--- a/projects.html
+++ b/projects.html
@@ -16,13 +16,13 @@
     <p>This is my first project I made for our HTML foundations class. It's about a dumb joke I made to my boyfriend about what if he was the opener for Sinbad this weekend.
     </p>
     <img class="pictures" src="images/andy-hurst.jpg" alt="picture_of_Andy"/>
-    <a href="Project_One.html">Andy Hurst Page</a>
+    <a href="project-one.html">Andy Hurst Page</a>
   </article>
   <article>
     <p>This is a project I made last winter when I took an introduction to programming course through Code Fellows
     </p>
     <img class="pictures" src="images/animals.jpg" alt="picture_of_animals"/>
-    <a href="Project_Two.html">Project for Javascript Class</a>
+    <a href="project-two.html">Project for Javascript Class</a>
   </article>
   <footer>
     <p>copyright 2015</p>
