it's not supposed to have a slash

--- a/project-one.html
+++ b/project-one.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset= "UTF-8">
     <title>Semantic Tags></title>
-    <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css">
   </head>
 <header>
   <h1>KUOW's Own Andy Hurst Opening for Sinbad This Weekend at the Emerald Queen Casino!</h1>
