--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="images/fall-logo.jpg" alt="fall-logo"/>
     <!-- logo, site name, main nav -->
     <nav>
-      <button>
+      <button class="button-link" style = "background: url(images/Bee.jpg) alt ="bee" border-radius: 100%;">
         <a href="projects.html">projects</a>
       </button>
     </nav>
@@ -21,7 +21,7 @@
     <p>When I'm not learning about front-end web development, I like to go to pumpkin patches.  I'm a big fan of snacks, too. </p>
   </article>
   <footer>
-    <p>copyright 2015</p>
+    <p>Copyright 2015</p>
     <a href="http://www.gmail.com">Contact</a>
     <a href="https://www.facebook.com/nicky.mack.33">Social Media</a>
   </footer>
