changed some font colors, added css to the footer and header image. changed it so that the footer and header position is fixed

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="utf-8"/>
   <title>Nicky Mack</title>
   <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css">
+  <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Open+Sans+Condensed:300|Pacifico|Cabin+Condensed' rel='stylesheet' type='text/css'>
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
+  
 <body>
   <header>
     <img src="images/fall-logo.jpg" alt="fall-logo"/>
-    <!-- logo, site name, main nav -->
     <nav>
       <button class="button-link" style = "background: url(images/Bee.jpg) alt ="bee" border-radius: 100%;">
         <a href="projects.html">projects</a>
@@ -16,6 +18,7 @@
     </nav>
   </header>
   <article>
+    <i class="fa fa-creative-commons fa-spin"></i>
     <h1>Welcome to my Portfolio Page!</h1>
     <img class="pictures" src="images/Nicky.jpg" alt="my-picture"/>
     <p>When I'm not learning about front-end web development, I like to go to pumpkin patches.  I'm a big fan of snacks, too. </p>
