--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <title>Projects</title>
   <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css">
+  <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Open+Sans+Condensed:300|Pacifico|Cabin+Condensed' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
