got rid of the nav bar since it’s just one link added anchor icon changed some fonts

--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
   <header>
     <img src="images/fall-logo.jpg" alt="fall-logo"/>
     <nav>
-      <button class="button-link" style = "background: url(images/Bee.jpg) alt ="bee" border-radius: 100%;">
-        <a href="projects.html">projects</a>
-      </button>
+      <ul class="fa-ul">
+        <li>
+          <i class="fa fa-anchor">
+            <a href="projects.html">projects</a>
+          </i>
+        </li>
+      </ul>
+ 
     </nav>
   </header>
   <article>
-    <i class="fa fa-creative-commons fa-spin"></i>
     <h1>Welcome to my Portfolio Page!</h1>
     <img class="pictures" src="images/Nicky.jpg" alt="my-picture"/>
     <p>When I'm not learning about front-end web development, I like to go to pumpkin patches.  I'm a big fan of snacks, too. </p>
