--- a/project-one.html
+++ b/project-one.html
@@ -4,6 +4,8 @@
     <meta charset= "UTF-8">
     <title>Semantic Tags></title>
     <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css">
+    <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Open+Sans+Condensed:300|Pacifico|Cabin+Condensed' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
 <header>
   <h1>KUOW's Own Andy Hurst Opening for Sinbad This Weekend at the Emerald Queen Casino!</h1>
@@ -27,13 +29,13 @@
   <figure>
     <img src="http://mediad.publicbroadcasting.net/p/kuow/files/styles/x_large/public/201505/AndyHurst.jpg">
   </figure>
-  <figcaption>KUOW's Andy Hurst</figcaption>
+  <figcaption class="project-one">Andy Hurst: Babe of NPR</figcaption>
   <p>Andy has been a figure in public radio for over ten years.</p>
   </article>
   <secion>
     <figure>
     <img src="https://pbs.twimg.com/profile_images/477764918326743040/q8_9xrhm.png">
-      <figcaption>Comedian Sinbad</figcaption>
+      <figcaption class="project-one">Comedian Sinbad</figcaption>
       <p>Sinbad is a comedian best known for his work on the popular sitcom "The Sinbad Show"</p>
     </figure>
   </secion>
