Added bootstrap to the index and projects page.  I changed the index picture to a different picture and used bootstrap to make it rounded and responsive.  For the Andy Hurst project page, I changed his picture with bootstrap, and also changed the buttons/links so that they were primary and secondary buttons, and also the style of them is different.  I also changed the color of the links because I didn’t realize it was the same color as the background before!  I had to make a new class of links in css for these because I still want them to be that beige color on the homepage, so I made a class for the links in the second page called “home-links”, and made sure to add that class even when I was using bootstrap on those links

--- a/project-one.html
+++ b/project-one.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset= "UTF-8">
     <title>Project One></title>
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css">
     <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Open+Sans+Condensed:300|Pacifico|Cabin+Condensed' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -14,20 +23,20 @@
 <nav>
   <ul>
     <li>
-      <a href="http://http://www.ticketmaster.com/Emerald-Queen-Casino-tickets-Tacoma/venue/123128">Tickets</a>
+      <a href="http://http://www.ticketmaster.com/Emerald-Queen-Casino-tickets-Tacoma/venue/123128" class="btn btn-primary btn-lg home-links" role="link" >Tickets</a>
     </li>
     <li>
-      <a href="http://https://twitter.com/sinbadbad">Sinbad</a>
+      <a href="http://https://twitter.com/sinbadbad" class="btn btn-secondary btn-lg home-links" >Sinbad</a>
     </li>
     <li>
-      <a href="http://kuow.org/people/andy-hurst"KUOW>More Info</a>
+      <a href="http://kuow.org/people/andy-hurst" class="btn btn-secondary btn-lg home-links">More Info</a>
     </li>
   </ul>
 </nav>
-<h2>Don't Miss This Once in a Lifetime Oppprtunity to See Your Favorite Public Radio Producer Live on Stage with the Legendary Comic Sinbad!</h2>
+<h2 class="h2">Don't Miss This Once in a Lifetime Oppprtunity to See Your Favorite Public Radio Producer Live on Stage with the Legendary Comic Sinbad!</h2>
 <article>
   <figure>
-    <img src="http://mediad.publicbroadcasting.net/p/kuow/files/styles/x_large/public/201505/AndyHurst.jpg" alt="picture of Andy Hurst">
+    <img src="http://mediad.publicbroadcasting.net/p/kuow/files/styles/x_large/public/201505/AndyHurst.jpg" alt="picture of Andy Hurst" class= "img-rounded">
   </figure>
   <figcaption class="project-one">Andy Hurst: Babe of NPR</figcaption>
   <p>Andy has been a figure in public radio for over ten years.</p>
