--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="utf-8"/>
   <title>Nicky Mack</title>
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
   <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css">
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Open+Sans+Condensed:300|Pacifico|Cabin+Condensed' rel='stylesheet' type='text/css'>
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -30,7 +39,7 @@
   </header>
   <article>
     <h1>Welcome to my Portfolio Page!</h1>
-    <img class="pictures" src="images/Nicky.jpg" alt="my-picture"/>
+    <img src="images/nicky-mack.jpg" alt="my-picture" class="img-rounded" "img-responsive">
     <p>When I'm not learning about front-end web development, I like to go to pumpkin patches.  I'm a big fan of snacks, too. </p>
   </article>
   <footer>
